--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ authors = [
 ]
 dependencies = [
     "litellm>=1.67.2",
+    "nest-asyncio>=1.6.0",
+    "pyqt5>=5.15.11",
     "python-dotenv>=1.1.0",
     "textual>=3.1.1",
     "toml>=0.10.2",
