--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,8 @@ Issues = "https://github.com/username/language-tutor/issues"
 [tool.setuptools]
 package-dir = {"" = "src"}
 packages = ["language_tutor", "language_tutor.languages"]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+]
