--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "nest-asyncio>=1.6.0",
     "pyqt5>=5.15.11",
     "pyqtwebengine>=5.15.7",
+    "pytest-asyncio>=1.0.0",
     "python-dotenv>=1.1.0",
     "toml>=0.10.2",
 ]
@@ -41,4 +42,9 @@ packages = [
 [dependency-groups]
 dev = [
     "pytest>=8.3.5",
+    "pytest-asyncio>=1.0.0",
 ]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
